feat : Stream을 활용하여 printLongestWordTop100() 구현